--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,13 @@ baseurl: ""
 url: "http://www.shalandis.com/"
 title_description: "玫瑰色的远方"
 title_image: "/favicons/title.png"
-#github_repository: https://github.com/***
 post_limit: 5
+disqus_account: PinkGabriel
+#github_repository: https://github.com/***
 
+github_username:  PinkGabriel
 # Social usernames/URLs
 #twitter_username: PinkGabriel
-github_username:  PinkGabriel
 #linkedin_link: http://***
 #google_plus_link: http://***
 #stackoverflow_link: http://***
