--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "http://www.shalandis.com/"
 title_description: "玫瑰色的远方"
 title_image: "/favicons/title.png"
 post_limit: 5
-disqus_account: PinkGabriel
+disqus_account: shalandis
 #github_repository: https://github.com/***
 
 github_username:  PinkGabriel
