--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ twitter_username: snow168rain
 #linkedin_link: http://***
 #google_plus_link: http://***
 #stackoverflow_link: http://***
+google_analytics: Shalandis
 
 # Footer
 footer_left: "Made with <i class=\"fa fa-heart\"></i> by <a href=\"https://twitter.com/snow168rain\">xjy</a>"
