--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ twitter_username: snow168rain
 #linkedin_link: http://***
 #google_plus_link: http://***
 #stackoverflow_link: http://***
-google_analytics: UA-78081730-1
+#google_analytics: UA-78081730-1
 
 # Footer
 footer_left: "Made with <i class=\"fa fa-heart\"></i> by <a href=\"https://twitter.com/snow168rain\">xjy</a>"
